Fix Start button background color on Firefox

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -41,6 +41,7 @@ label {
 
 #start-ui button {
     padding: 20px 30px;
+    background-color: buttonface; /* Needed for Firefox for some reason */
 }
 #start-ui label {
     font-size: 14px;
